Code slightly simplified